// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render 1`] = `
<div>
  <div
    class="sc-AxjAm dIozXf"
    color="primary"
  />
</div>
`;

exports[`Label should render a large one 1`] = `
<div>
  <div
    class="sc-AxjAm llArDD"
    color="primary"
  />
</div>
`;

exports[`Label should render a small one 1`] = `
<div>
  <div
    class="sc-AxjAm dIozXf"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid 1`] = `
<div>
  <div
    class="sc-AxjAm qJrd"
    color="primary"
  />
</div>
`;

exports[`Label should render danger color 1`] = `
<div>
  <div
    class="sc-AxjAm cICiwg"
    color="danger"
  />
</div>
`;

exports[`Label should render neutral color 1`] = `
<div>
  <div
    class="sc-AxjAm gofOrk"
    color="neutral"
  />
</div>
`;

exports[`Label should render primary color 1`] = `
<div>
  <div
    class="sc-AxjAm dIozXf"
    color="primary"
  />
</div>
`;

exports[`Label should render success color 1`] = `
<div>
  <div
    class="sc-AxjAm hHkbDr"
    color="success"
  />
</div>
`;

exports[`Label should render warning color 1`] = `
<div>
  <div
    class="sc-AxjAm gofOrk"
    color="warning"
  />
</div>
`;
